# mipt-ded-bardak-components

./: .gitmodules  CMakeLists.txt  README.md
mods/person/: CMakeLists.txt  main.cpp  person_proto.hpp
mods/timer/: CMakeLists.txt  timer.hpp
mods/timer/src/: timer.cpp
msva/: CMakeLists.txt  README.md  sample.ini
msva/src/: all.hpp  main.cpp  srv.cpp  srv_proto.hpp
pan/: .gitignore  CMakeLists.txt  README.md
pan/examples/: add.bmsg  add.cpp  add.pan  every.bmsg  every.pan  gen-example.py
pan/inc/: libPan.h  libpan.h  libpan_cxx_macros.hpp
pan/src/: libPan.c  libpan.c  standalone.c
server.fake/: CMakeLists.txt  game.cpp  main.cpp
